# front-stitch

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
ar_vis/: CMakeLists.txt
ar_vis/apps/: TestThreadTrackMain.cpp
ar_vis/include/: Model.h  TextSourceManager.h  ThreadInteractiveWidget.h  driveassistant.h  math_utils.h  mypainter.h  shaders.h  track.h
ar_vis/proto/: blade_height.proto  blade_message.proto  image.proto  lane_line.proto  steering_angle.proto
ar_vis/src/: Config.cpp  EcalBladeHeightSender.cpp  EcalImageSender.cpp  Model.cpp  TextSourceManager.cpp  ThreadInteractiveWidget.cpp  driveassistant.cpp  interactiveimagewidget.cpp  main.cpp  mypainter.cpp  shaders.cpp  track.cpp
ar_vis/yamls/: camera_0_intrin.yaml  camera_0_intrin_undistort.yaml  camera_1_intrin.yaml  camera_1_intrin_undistort.yaml  camera_2_intrin.yaml  camera_2_intrin_undistort.yaml  camera_3_intrin.yaml  camera_3_intrin_undistort.yaml  camera_extrin.yaml  camera_extrin_1_and_2.yaml  camera_extrin_1_and_3.yaml  camera_extrin_1_and_6.yaml  ground copy.yaml  ground.yaml  ground_new.yaml
assets/3505_ply/: 4.2.ply  4.3.ply  5.1.ply  5.2.ply  6.1.ply  6.2.ply  7.1.ply  7.2.ply
assets/3505_ply_s/: 1.1.ply  2.1.ply  2.2.ply  4.1.ply  4.2.ply  4.3.ply  4.4.ply  5.1.ply  5.2.ply  6.1.ply  6.2.ply  7.1.ply  7.2.ply
assets/yamls/: camera_extrin_5_and_8.yaml  config.yaml  ground_bak.yaml
example/: CMakeLists.txt
example/include/: EcalImageSender.h  FrontStitcherMain.h  Undistorter.h  yolo.h
example/proto/: lane_line.proto
example/src/: EcalImageSender.cpp  FrontStitcherMain.cpp  GstReceiver.cpp  Undistorter.cpp  yolo_detect.cpp
example/yamls/: camera_8_intrin.yaml  camera_9_intrin.yaml  camera_extrin_5_and_9.yaml  config.yaml
include/: BladeModelTransformer.h  Config.h  EcalImageSender.h  GstReceiver.h  Model.h  TagPosesSet.h  constraint_terms.cuh  cylinder_stitcher.cuh  image_alignment_gpu.cuh  innoreal_timer.hpp  interactiveimagewidget.h  math_utils.h  mypainter.h  reduce.cuh  render.cuh  seam_finder.cuh  track.h  x_pcg_solver.cuh  yolo_detect.h
include/calc/: reduce.cuh
include/common/: EcalBladeHeightSender.h  GstReceiver.h  cylinder_stitcher.cuh  cylinder_stitcher.h  multiband_blend.cuh  render.cuh
include/core/: FrontStitcherMain.h
include/render/: BladeModelTransformer.h  mypainter.h  nz_block_statistics.cuh  project_to_cylinder.cuh  seam_finder.cuh  shaders.h  track.h  x_gn_solver.cuh
include/stage/: ThreadInteractiveWidget.h  driveassistant.h  interactiveimagewidget.h
include/util/: cuda_utils.h
include/yolo/: yolo.h  yolo_detect.h
lib/: libfreetype.so.6.18.3
proto/: blade_message.proto  can.proto
src/: BladeModelTransformer.cpp  Config.cpp  EcalBladeHeightSender.cpp  EcalImageSender.cpp  FrontStitcherMain.cpp  Model.cpp  TextSourceManager.cpp  ThreadInteractiveWidget.cpp  constraint_terms.cu  driveassistant.cpp  image_alignment_gpu.cu  interactiveimagewidget.cpp  main.cpp  multiband_blend.cu  mypainter.cpp  nz_block_statistics.cu  project_to_cylinder.cu  reduce.cu  render.cu  seam_finder.cu  shaders.cpp  x_gn_solver.cu  x_pcg_solver.cu  yolo.cpp
src/calc/: constraint_terms.cu  nz_block_statistics.cu  reduce.cu  x_gn_solver.cu  x_pcg_solver.cu
src/common/: EcalBladeHeightSender.cpp  EcalImageSender.cpp  GstReceiver.cpp  cylinder_stitcher.cu  multiband_blend.cu  render.cu
src/core/: Config.cpp  FrontStitcherMain.cpp  main.cpp
src/render/: BladeModelTransformer.cpp  Model.cpp  constraint_terms.cu  image_alignment_gpu.cu  mypainter.cpp  nz_block_statistics.cu  project_to_cylinder.cu  reduce.cu  seam_finder.cu  shaders.cpp  track.cpp  x_gn_solver.cu  x_pcg_solver.cu
src/stage/: TextSourceManager.cpp  ThreadInteractiveWidget.cpp  driveassistant.cpp  interactiveimagewidget.cpp
src/util/: loguru.cpp
src/yolo/: yolo.cpp  yolo_detect.cpp
stitcher/: CMakeLists.txt
stitcher/apps/: test.cpp
stitcher/include/: constraint_terms.cuh  cuda_utils.h  cylinder_stitcher.cuh  cylinder_stitcher.h  image_alignment_cpu.h  multiband_blend.cuh  project_to_cylinder.cuh  reduce.cuh  render.cuh  seam_finder.cuh  test_JTJ.h  x_gn_solver.cuh  x_pcg_solver.cuh
stitcher/src/: constraint_terms.cu  cylinder_stitcher.cpp  cylinder_stitcher.cu  image_alignment_cpu.cpp  image_alignment_gpu.cu  multiband_blend.cu  nz_block_statistics.cu  project_to_cylinder.cu  reduce.cu  render.cu  seam_finder.cu  test_JTJ.cpp  x_gn_solver.cu  x_pcg_solver.cu
yamls/: camera_5_intrin.yaml  camera_5_intrin_undistort.yaml  camera_8_intrin_undistort.yaml  camera_9_intrin_undistort.yaml  ground.yaml
